----------------------------------------
Release Notes for TriBITS
----------------------------------------

2020/09/28:

*) MAJOR: Tests defined with `TRIBITS_ADD_TEST()` and
 `TRIBITS_ADD_ADVANCED_TEST()` have been updated from using `add_test(<name>
 <command>)` to using `add_test(NAME <name> COMMAND <command>)`.  This now
 causes CMake to error out if there is more than one test with the same name
 in the same directory.  Before, CMake would allow it (but the behavior in
 that case was undocumented and undefined).  For more details, see
 trilinos/Trilinos#8110.

2020/06/16:

(*) MINOR: The variables <Package>_FORTRAN_COMPILER and
    <Package>_FORTRAN_FLAGS in the <Package>Config.cmake files (in the build
    dir and the install dir) are deprecated.  Please use the new variables
    <Package>_Fortran_COMPILER and <Package>_Fortran_FLAGS.  (Justification:
    In raw CMake, the compiler is called 'Fortran', not 'FORTRAN'.  Also, the
    name 'Fortran' is already used in the <Project>Config.cmake file.)

2020/04/16:

(*) MAJOR: TriBITS Core: CMAKE_CXX_STANDARD is now always set to at least 11
    to enable C++11 support.  The ${PROJECT_NAME}_ENABLE_CXX11 option has been
    removed, but a variable of the same name is hard-coded to ON for
    compatibility.

(*) MAJOR: TriBITS Core: CMAKE_CXX_FLAGS will no longer contain an explicit
    C++ standard option like '-std=c++11'.  TriBITS clients' dependents
    using CMake will still compile with support for C++11 language constructs
    because libraries come with INTERFACE_COMPILE_FEATURES including cxx_std_11.
    However, those using Makefile.export.<Package> files will no longer get
    a '-std=c++11` flag from TriBITS.

2018/10/10:

(*) MAJOR: TriBITS Core: Changed minimum CMake version from 2.8.11 to 3.10.0.

2017/09/25:

(*) MINOR: TriBITS CTest Driver: Added cache and enve vars
    CTEST_SUBMIT_RETRY_COUNT and CTEST_SUBMIT_RETRY_DELAY to allow the number