@@ -469,10 +469,14 @@ FUNCTION(TRIBITS_ADD_TEST_GET_NUM_PROCS_USED  NUM_MPI_PROCS_IN
   NUM_MPI_PROCS_VAR_NAME_IN  NUM_MPI_PROCS_USED_OUT
   NUM_MPI_PROCS_USED_NAME_OUT
   )
-  IF (NOT DEFINED MPI_EXEC_DEFAULT_NUMPROCS)
+  IF (NOT TPL_ENABLE_MPI)
+    SET(MPI_EXEC_DEFAULT_NUMPROCS 1)
+  ELSEIF (NOT DEFINED MPI_EXEC_DEFAULT_NUMPROCS)
     SET(MPI_EXEC_DEFAULT_NUMPROCS 1)
   ENDIF()
-  IF (NOT DEFINED MPI_EXEC_MAX_NUMPROCS)
+  IF (NOT TPL_ENABLE_MPI)
+    SET(MPI_EXEC_MAX_NUMPROCS 1)
+  ELSEIF (NOT DEFINED MPI_EXEC_MAX_NUMPROCS)
     SET(MPI_EXEC_MAX_NUMPROCS 1)
   ENDIF()
   IF (NOT NUM_MPI_PROCS_IN)
